paraphrase of a paragraph in week3 article

--- a/VG500/WEEK4/20190322.tex
+++ b/VG500/WEEK4/20190322.tex
@@ -2,7 +2,7 @@
 \usepackage{amsmath, amsfonts, amssymb}
 
 \title{Paraphrase of  a paragraph in "Progress-variable approach for large-eddy simulation of non-premixed turbulent combustion"}
-\author{Yu Cang \ \ 018370210001}
+\author{Yu Cang \quad 018370210001}
 \date{2019-03-22}
 
 \begin{document}
@@ -10,7 +10,11 @@
 \maketitle
 
 \section{Original paragraph}
-
+	A new approach to chemistry modelling for large-eddy simulation of turbulent reacting flows is developed. Instead of solving transport equations for all of the numerous species in a typical chemical mechanism and modelling the unclosed chemical source terms, the present study adopts an indirect mapping approach, whereby all of the detailed chemical processes are mapped to a reduced system of tracking scalars. Here, only two such scalars are considered: a mixture fraction variable, which tracks the mixing of fuel and oxidizer, and a progress variable, which tracks the global extent of reaction of the local mixture. The mapping functions, which describe all of the detailed chemical processes with respect to the tracking variables, are determined by solving quasi-steady diffusion-reaction equations with complex chemical kinetics and multicomponent mass diffusion. The performance of the new model is compared to fast-chemistry and steady-flamelet models for predicting velocity, species concentration, and temperature fields in a methane-fuelled coaxial jet combustor for which experimental data are available. The progress-variable approach is able to capture the unsteady, lifted flame dynamics observed in the experiment, and to obtain good agreement with the experimental data, while the fast-chemistry and steady-flamelet models both predict an attached flame.
 \section{My paraphrase}
+	Without the need to resolve all of the numerous species, in the simulation of chemical reacting flow, the author proposed a new method to ease the numerical efforts.\newline
+	A mapping technology is introduced such that only 2 scalar variables are to be considered. The mixture fraction has a linear relation with the numerous species and is used to track the mixing of fuel and oxidizer. The progress variable is used to track the global extend of local mixture reaction.\newline
+	Detailed chemical mechanism is used and the mapping function is determined by solving quasi-stead diffusion-reaction equations.
+
 
 \end{document}
