fix section missing and import remark template

--- a/VG500/HW2/submission.tex
+++ b/VG500/HW2/submission.tex
@@ -11,6 +11,7 @@
 
 \usepackage{graphicx}
 \usepackage{blindtext}
+\usepackage{enumerate}
 
 \usepackage{listings}
 \lstset{language=Matlab}
@@ -134,9 +135,22 @@
 \section{Group Exercise}
 	I'm in Group 2, responsible for paragraph 4, 14 and 19.
 	\subsection{Summary}
-		In paragraph 4, the key idea author want to convey is, when writting something, we'd better have some target readers in mind. In this way, emphasis on will be paid at different levels and different aspects so that readers may have better understanding.\newline
-		I paragraph 14, details about using correct words are explained. First of all, using words correctly does not mean to redundency. Instead, it means to express both clearly and precisely so that ambiguity does not exist, and readers will not be confused or mislead. Also, instead of using symbolic notations, which is quite cumbersome, it's better to use sentences expressing arguments or theorems.\newline
-		In paragraph 19, the author tells us not to be disturbed by editorial related issues. Some of editorial work like spelling check are helpful, but they may apply some editorial rules mechanically, which change the original meaning of contents. If some intrinsic words have been used, we should pay attention to keep them unchanged.
+		In paragraph 4, the author mainly talks about the necessity, the advantange and the way towards a well-organized structure. Organization is the core competence of a book. A clear structure helps readers follow the logic and understand easily. Writters need to prepare an outline at first, which may take a long period, and then decide what are around the kernel and put them in.\newline
+		In paragraph 14, the author indicated the importance of using technical terms correctly and gave 3 examples explaining it. It's better not to use newly created words, and use old ones instead.\newline
+		In paragraph 19, the author suggest writters to stop, without hesitation, after writting, not to worry about minor modifications. Some tips were provided for checking the manuscripts quickly.  
+		
+	\subsection{Remarks on peer's work}
+		\begin{enumerate}[(a)]
+			\item \textbf{Remarks on Shuixin Xiao's summary}\newline
+				All the key points in the article are listed, especially for section 4, of which the main ideas from the author are clearly summarized. It would be better if some conjunction words are used to connect points. This is a good summary without doubt. 
+			\item \textbf{Remarks on Yijie Wang's summary}\newline
+				In this summary, the expression is clear and coherent. The core parts of the sections are extracted. It will be much better if the statement can be more concise.
+			\item \textbf{Remarks on Yaoxia Shao's summary}\newline
+				This groupmate makes a really good summary, of which the perspective is quite different and profound. Obviously, he has clearly understood the author’s ideas, and paraphrase them in his own words. 
+		\end{enumerate}
+	
+	\subsection{Discussion}
+		This part is submitted by Xiao Shuixin, whose student ID is 018370910023.
 
 \section{Grammar}
 	\subsection{Plurals of given words}
