--- a/VG500/HW2/submission.tex
+++ b/VG500/HW2/submission.tex
@@ -142,11 +142,13 @@
 	\subsection{Remarks on peer's work}
 		\begin{enumerate}[(a)]
 			\item \textbf{Remarks on Shuixin Xiao's summary}\newline
-				All the key points in the article are listed, especially for section 4, of which the main ideas from the author are clearly summarized. It would be better if some conjunction words are used to connect points. This is a good summary without doubt. 
+				Statements are both clear and specific and core parts are described. No spelling mistakes nor grammar errors.
+				 
 			\item \textbf{Remarks on Yijie Wang's summary}\newline
-				In this summary, the expression is clear and coherent. The core parts of the sections are extracted. It will be much better if the statement can be more concise.
+				It'a a quite good summary as most aspects in the paragraphs are covered. Author's idea are exactly conveyed, no spelling mistakes nor grammar errors.
+				
 			\item \textbf{Remarks on Yaoxia Shao's summary}\newline
-				This groupmate makes a really good summary, of which the perspective is quite different and profound. Obviously, he has clearly understood the author’s ideas, and paraphrase them in his own words. 
+				This summary is quite pertinent, and main idea of original paragraphs are explained. No spelling mistakes nor grammar errors.
 		\end{enumerate}
 	
 	\subsection{Discussion}
