add part of group discussion

--- a/VG500/HW4/submission.tex
+++ b/VG500/HW4/submission.tex
@@ -90,16 +90,73 @@
 	\end{enumerate}
 
 \section{Group Exercise}
-	This section mainly talks about the general guidelines on graphics to be used in scientific writings. \newline
-	Firstly, one should spare enough time to generate figures. Roughly, spend as much as that of writing text.\newline 
-	Secondly, it is better to prepare an outline and decide what are the most important elements to conveyed before drawing pictures.\newline 
-	Thirdly, either placed in stand-alone form or in inlined form, figures should be linked and referenced properly. Usually, one should provide a detailed caption, which illustrates the key point of the figure, and a complete reference that faciliates readers a lot. It's better not to use abbreviations like "Fig.", which may slow readers down. \newline
-	Then, consistency between graphics and text should be maintained through out the whole article. For example, it is suggest to use figures of same sacles, take same line width, keep fonts in figures as same as that in text, and choose color coding according to that used in text etc. In practice, instead of using different graphics software, the best way to keep consistency is to use a single graphics program. \newline
-	Also, labels play an important role in plots. Text in labels should be of the same font as that in the main text, and fonts between labels should also be consistent with each other. Notions should not be different, for example, $\frac{1}{2}$ vs $0.5$, $e^{-i\pi}$ vs $-1$. In addition, labels should be both clear and well placed, which provide a straight forward explanation.\newline
-	Most importantly, issues concerning plots and charts should be carefully handled. 3D pie charts may introduce distortions and should be avoided whenever possible. Instead, table can be used to explain in detail numbers and percentages. It is recommended to use colors that can group things or direct readers' focus. As background patterns may distract and is likely to blur important messages, they should not be used as well. \newline
-	Finally, "avoid distractions" and "steer attention" are useful concepts when designing figures. Distraction like strong contrast produced by sparse vs dense, white vs black should be avoided. As human eyes are much better at grouping things according to colors instead of line patterns, distraction originates from dashed or dot lines should also be avoided. Backgourd image is usually unnecessary as it convey little message.  
+	I'm the group leader and members are Ning Kang and Reze Rouhi Ardeshiri.
 	
+	\subsection{Yu Cang's summary}
+		This section mainly talks about the general guidelines on graphics to be used in scientific writings. \newline
+		Firstly, one should spare enough time to generate figures. Roughly, spend as much as that of writing text.\newline 
+		Secondly, it is better to prepare an outline and decide what are the most important elements to conveyed before drawing pictures.\newline 
+		Thirdly, either placed in stand-alone form or in inlined form, figures should be linked and referenced properly. Usually, one should provide a detailed caption, which illustrates the key point of the figure, and a complete reference that faciliates readers a lot. It's better not to use abbreviations like "Fig.", which may slow readers down. \newline
+		Then, consistency between graphics and text should be maintained through out the whole article. For example, it is suggest to use figures of same sacles, take same line width, keep fonts in figures as same as that in text, and choose color coding according to that used in text etc. In practice, instead of using different graphics software, the best way to keep consistency is to use a single graphics program. \newline
+		Also, labels play an important role in plots. Text in labels should be of the same font as that in the main text, and fonts between labels should also be consistent with each other. Notions should not be different, for example, $\frac{1}{2}$ vs $0.5$, $e^{-i\pi}$ vs $-1$. In addition, labels should be both clear and well placed, which provide a straight forward explanation.\newline
+		Most importantly, issues concerning plots and charts should be carefully handled. 3D pie charts may introduce distortions and should be avoided whenever possible. Instead, table can be used to explain in detail numbers and percentages. It is recommended to use colors that can group things or direct readers' focus. As background patterns may distract and is likely to blur important messages, they should not be used as well. \newline
+		Finally, "avoid distractions" and "steer attention" are useful concepts when designing figures. Distraction like strong contrast produced by sparse vs dense, white vs black should be avoided. As human eyes are much better at grouping things according to colors instead of line patterns, distraction originates from dashed or dot lines should also be avoided. Backgourd image is usually unnecessary as it convey little message.  
+		
+		\begin{itemize}
+			\item \textbf{Comment by Ning Kang} \newline
+				Yu's summary is very good, and his summary covers almost all the points of this section. In addition, he clearly described the precautions for figures. However, there are some grammatical problems in his summary. For example, the last sentence of the last paragraph is better written as "it conveys little information".
+				
+			\item \textbf{Comment by Reze Rouhi Ardeshiri} \newline
+				
+		\end{itemize}
+		
+	\subsection{Reze Rouhi Ardeshiri's summary}
+		The author of “The TikZ and PGF Packages” book, in Section 7, describes the graphics, which points to good and useful tips.\newline
+		In the first step, to write a paper with a lot of figures, you need to spend a lot of time on each page to have high-quality work and for the design of a figure, at least we need to consider time as much as a text or even more so.\newline
+		In the next step, we must decide what kind of figure to put in the paper so that the reader reaches the goal of what we want that and the reader understands the issue. That is, the output of the figure you want to draw is clear to the reader.\newline
+		Also, placing the figure in the text and linking it to the text is one of the remarkable things that can be done in two ways: stand-alone and inline.\newline
+		Additionally, if you want to design the figure, we need to have the same sizes, fonts, and lines in all of the figures and not be different from the other figures and for the integrity of the figures, it's better to use the same software to design the figure. In general, there must be consistency between graphics and text to be nice.\newline
+		Label in graphics is one of the significant points in the paper. With a good label, you can summarize the description of a figure, also important for labeling should be important points to be readable. It’s implying that it should be legible.\newline
+		One of the most important and frequent issues in the papers are plots that can play an important role in understanding the problem and the reports. In this case, you should not use 3D pie or 3D bar charts because of the lack of realistic values and percentages. That’s why the table is proper replacing for providing the results.\newline
+		Specifying the paper format is one of the things considered in graphics. It should not be large headlines, bold text, large, and white areas. Also, some of the words that the author has to emphasize should be illustrated with Italic font. So the reader will not be confused by reading the paper. In a word, avoid distractions!
+		
+		\begin{itemize}
+			\item \textbf{Comment by Ning Kang} \newline
+				Reza's summary is very good, and his summary contains the main content of this section. Here are two questions from his summary. First of all, his summary lacks a general description, and some paragraphs only mention the precautions. In addition, some paragraphs lack a description of specific considerations, such as his summary of the third part.
+			
+			\item \textbf{Comment by Yu Cang} \newline
+				Obviously, Reze Rouhi Ardeshiri has read the paper thoroughly. Main ideas are conveyed with clear explanations. For each aspect, both reasons and understandings are well described. Examples are provided so that comparison can be imagined. In organizing all paragraphs, transitional words are used smoothly, which facilitate readers to grasp the structure quickly. But in terms of pronouns used, I think it is not good to use “you”, instead, “one” is much better. No spelling mistakes are found. In general, it is a wonderful summary.
+			
+		\end{itemize}
 	
+	\subsection{Ning Kang's summary}
+		This section focuses on the typical good practices and bad practices of the figures used in scientific papers and presents general guidelines. \newline
+		First, the authors should use enough time to generate figures. A typical mistake is to write text in a lot of time and to generate the figures in a very little time. In general, the cost of time in figures should be as much as writing text.\newline
+		Second, when creating a paper, the authors should firstly write a rough outline, then fill the text to create a draft and continually revise.  \newline
+		Third, whether you place figures in the stand-alone or inline form, you should make the correct links and references. In general, you should provide a title that explains the figures, as well as a complete reference. A bad practice is to use abbreviations, which may slow down the reader.\newline
+		Good articles need to ensure consistency between all figures and text. For example, all figures should be consistent in style, size, font, etc. In practice, the same drawing software can be used to meet the previous requirements. \newline
+		Almost all the figures contain labels. Good labels need to be the same font, consistent with each other and using the same notation. In addition, good labels need to help the reader, so the labels need to be close to the figures and let the reader put more focus on the figures. \newline
+		Be careful with plots and charts. 3D pie charts may cause distortion, so try to avoid using them. Moreover, the irritating background should be avoided. Consider using a table instead of a pie chart. Also, avoid using colors arbitrarily, which will distract the reader. \newline
+		Finally, when authors design figures, they need to work hard to guide the reader's attention and avoid distractions. Good typography is something you do not notice. In addition, the strong contrast in the figures will distract the readers, which is something need to avoid. In terms of guiding the reader's attention, it is best to use colors instead of lines.
+		
+		\begin{itemize}
+			\item \textbf{Comment by Yu Cang} \newline
+				Clearly, Ning Kang has noticed all the key points expressed by the author. He has listed all the aspects mentioned in the paper and explained them in detail. Both good and bad practices are highlighted and compared, which is convenient for readers to understand. Transitional words are properly used, making the summary reads quite smoothly. No spelling mistakes were found and, in my opinion, it is an excellent summary.
+				
+			\item \textbf{Comment by Reze Rouhi Ardeshiri} \newline
+		
+		\end{itemize}
+	
+	\subsection{Final Version}
+		This section mainly talks about the general guidelines on graphics to be used in scientific writings. \newline
+		In the first step, to write a paper with a lot of figures, one need to spend a lot of time on each page to have high-quality work and for the design of a figure, at least we need to consider time as much as a text or even more so.\newline
+		Next, one should decide what kind of figure to put in the paper so that the reader reaches the goal of what we want that and the reader understands the issue. That is, the output of the figure you want to draw is clear to the reader.\newline
+		At the same time, either placed in stand-alone form or in inlined form, figures should be linked and referenced properly. Usually, one should provide a detailed caption, which illustrates the key point of the figure, and a complete reference that faciliates readers a lot. It's better not to use abbreviations like "Fig.", which may slow readers down. \newline
+		Then, consistency between graphics and text should be maintained through out the whole article. For example, it is suggest to use figures of same sacles, take same line width, keep fonts in figures as same as that in text, and choose color coding according to that used in text etc. In practice, instead of using different graphics software, the best way to keep consistency is to use a single graphics program. \newline
+		Also, labels play an important role in plots. Text in labels should be of the same font as that in the main text, and fonts between labels should also be consistent with each other. Notions should not be different, for example, $\frac{1}{2}$ vs $0.5$, $e^{-i\pi}$ vs $-1$. In addition, labels should be both clear and well placed, which provide a straight forward explanation.\newline
+		Most importantly, issues concerning plots and charts should be carefully handled. 3D pie charts may introduce distortions and should be avoided whenever possible. Instead, table can be used to explain in detail numbers and percentages. It is recommended to use colors that can group things or direct readers' focus. As background patterns may distract and is likely to blur important messages, they should not be used as well. \newline
+		Finally, when authors design figures, they need to work hard to guide the reader's attention and avoid distractions. Good typography is something you do not notice. In addition, the strong contrast in the figures will distract the readers, which is something need to avoid. In terms of guiding the reader's attention, it is best to use colors instead of lines.
+		
 \section{\LaTeX}
 	\begin{table}[H]
 		\begin{center}
