add remaining comments, done

--- a/VG500/HW4/submission.tex
+++ b/VG500/HW4/submission.tex
@@ -90,7 +90,7 @@
 	\end{enumerate}
 
 \section{Group Exercise}
-	I'm the group leader and members are Ning Kang and Reze Rouhi Ardeshiri.
+	I'm the group leader and members are Ning Kang(017370910016) and Reze Rouhi Ardeshiri(018370990002).
 	
 	\subsection{Yu Cang's summary}
 		This section mainly talks about the general guidelines on graphics to be used in scientific writings. \newline
@@ -107,6 +107,7 @@
 				Yu's summary is very good, and his summary covers almost all the points of this section. In addition, he clearly described the precautions for figures. However, there are some grammatical problems in his summary. For example, the last sentence of the last paragraph is better written as "it conveys little information".
 				
 			\item \textbf{Comment by Reze Rouhi Ardeshiri} \newline
+				It is clear that Yu has fully studied the section 7 and has an accurate understanding of the content talked in this section. That's why he was able to make a good and understandable summary. It also used good descriptive words to describe the text so that the reader is not tired with reading the text. Although there are weaknesses in grammatically in the text, such as “suggested” instead of “suggest”, “same font like” instead of “same font as”, in general, I can say that it was great. Well done!
 				
 		\end{itemize}
 		
@@ -144,6 +145,7 @@
 				Clearly, Ning Kang has noticed all the key points expressed by the author. He has listed all the aspects mentioned in the paper and explained them in detail. Both good and bad practices are highlighted and compared, which is convenient for readers to understand. Transitional words are properly used, making the summary reads quite smoothly. No spelling mistakes were found and, in my opinion, it is an excellent summary.
 				
 			\item \textbf{Comment by Reze Rouhi Ardeshiri} \newline
+				Ning had a good summarize for this section. He has played very well with words to describe the text, and this is one of the techniques in writing. I did not see grammatical errors in this text, except for one that in the second paragraph should use “first” instead of “firstly”. In a word, he has done a good job.
 		
 		\end{itemize}
 	
