--- a/VG500/HW5/submission.tex
+++ b/VG500/HW5/submission.tex
@@ -15,7 +15,7 @@
 \usepackage{ulem} 
 \usepackage{pdfpages}
 \usepackage{multirow}
-
+\usepackage[numbers,sort&compress]{natbib}
 \usepackage{listings}
 \lstset{language=Matlab}
 
@@ -97,7 +97,11 @@
 	\end{enumerate}
 
 \section{\LaTeX}
+	Lorem\citep{RN5}  ipsum  dolor\citep{RN11}  sit  amet,  consectetuer  adipiscing  elit.   Ut  purus  elit,  vestibulum  ut,placerat  ac,  adipiscing  vitae,  felis.   Curabitur  dictum  gravida  mauris.   Nam  arcu  libero,nonummy eget, consectetuer id, vulputate a, magna.  Donec vehicula augue eu neque.  Pel-lentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.Mauris ut leo.  Cras viverra metus rhoncus sem.  Nulla et lectus vestibulum urna fringillaultrices.   Phasellus\citep{RN14}  eu  tellus  sit  amet  tortor  gravida  placerat.   Integer  sapien  est,  iaculisin,  pretium  quis,  viverra  ac,  nunc.   Praesent  eget  sem  vel  leo  ultrices  bibendum.   Aeneanfaucibus.  Morbi dolor nulla, malesuada eu, pulvinar at, mollis ac, nulla.  Curabitur\citep{RN10} auctorsemper  nulla.   Donec  varius  orci  eget  risus.   Duis  nibh  mi,  congue  eu,  accumsan  eleifend,sagittis quis, diam.  Duis eget orci sit amet orci dignissim rutrum.
 
 \section{Group exercise}
+
+\bibliographystyle{plainnat}
+\bibliography{reference}
 
 \end{document}
