--- a/VG500/HW5/reference.bib
+++ b/VG500/HW5/reference.bib
@@ -1,4 +1,4 @@
-﻿@article{RN5,
+@article{RN5,
    author = {Chen, Yuntao and Ihme, Matthias},
    title = {Large-eddy simulation of a piloted premixed jet burner},
    journal = {Combustion and Flame},
@@ -18,7 +18,6 @@
    pages = {69-98},
    ISSN = {0022-1120},
    DOI = {10.1017/s0022112099007946},
-   url = {<Go to ISI>://WOS:000086868600006},
    year = {2000},
    type = {Journal Article}
 }
