--- a/VG500/Slide/tex/preamble.tex
+++ b/VG500/Slide/tex/preamble.tex
@@ -15,8 +15,10 @@
 \usepackage{ulem}
 \usepackage{textcomp}
 \usepackage{tikz}
-
 \usepackage{listings}
+\usepackage{amsmath}
+\usepackage{amssymb}
+\usepackage{graphicx}
 
 \makeatletter
 \defbeamertemplate*{note page}{mynotes}
