--- a/VG500/Slide/tex/title.tex
+++ b/VG500/Slide/tex/title.tex
@@ -1,11 +1,9 @@
-
-\title{Elegance}
-\subtitle{An elegant theme for Beamer}
-\author{Ivan Čukić}
+\title{Numerical Simulation of Turbulent Combustion}
+\subtitle{Using the Turbulent Flamelet Model}
+\author{Yu Cang}
 
 \institute{\color{white}
-    email@address.org \\
-    http://address.org
+    yu.cang@sjtu.edu.cn\\
 } %
-\date{\footnotesize\color{mainthemecolour} Conference, City 2016. }
+\date{\footnotesize\color{mainthemecolour} CNF, Atlanta 2019. }
 
